--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -104,6 +104,10 @@
   font-family: 'BellinaFlorence';
 }
 
+.title--name h1{
+  font-size: 2.25rem;
+}
+
 @media (max-width: 1100px) {
   .landing--img {
     --img-size: 350px;
